# moteur_jeu_presentation

./: .gitignore  LICENSE  README.md  bonne_pratique.md  pyproject.toml
commande_ia/: addspec.md  developperspec.md  fixerror.md  modifyspec.md
config/: inventory_items.toml  player_stats.toml
levels/: niveau_plateforme.event  niveau_plateforme.niveau  niveau_plateforme.pnj
spec/: 1-systeme-de-couches-2d.md  10-affichage-statistiques-joueur.md  11-systeme-gestion-avancement-niveau.md  12-systeme-de-personnage-non-joueur.md  13-systeme-d-inventaire.md  14-moteur-de-particules.md  15-reduction-resolution-rendu.md  16-ecran-d-accueil.md  17-prechargement-elements-graphiques.md  18-zoom-camera-personnage-principal.md  19-gestion-affichage-curseur.md  2-personnage-principal.md  3-systeme-de-fichier-niveau.md  4-systeme-de-physique-collisions.md  5-mode-plein-ecran.md  6-systeme-de-saut.md  7-systeme-de-niveaux-personnage.md  8-systeme-de-bulles-de-dialogue.md  9-acceleration-graphique-mps-mac.md
sprite/personnage/1/: character.json
sprite/personnage/2/: character.json
sprite/personnage/3/: character.json
sprite/personnage/4/: character.json
sprite/personnage/5/: character.json
src/moteur_jeu_presentation/: __init__.py  main.py
src/moteur_jeu_presentation/assets/: __init__.py  cursor.py  preloader.py
src/moteur_jeu_presentation/entities/: __init__.py  entity.py  npc.py  player.py  player_level_manager.py
src/moteur_jeu_presentation/game/: __init__.py  events.py  progress.py
src/moteur_jeu_presentation/inventory/: __init__.py  config.py  inventory.py  (+1 more)
(+46 files in other folders)
