[project]
name = "moteur_jeu_presentation"
version = "0.1.0"
description = "Jeu développé avec pygame"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.MD"]
authors = [{ name = "thomas TOURRET" }]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.5.0",
    "pillow>=10.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
moteur_jeu_presentation = "moteur_jeu_presentation.main:main"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

